--- a/P3_Ejer_2_Lab/Debug/HTTP_Server.build_log.htm
+++ b/P3_Ejer_2_Lab/Debug/HTTP_Server.build_log.htm
@@ -58,27 +58,12 @@ Completed 21 File(s), Ratio 86%
 Note: source file 'RTE\Device\STM32F429ZITx\system_stm32f4xx.c' - object file renamed from '.\Debug\system_stm32f4xx.o' to '.\Debug\system_stm32f4xx_1.o'.
 compiling Web.c...
 compiling LowPower.c...
-LowPower.h(13): warning:  #1-D: last line of file ends without a newline
-  #endif
-LowPower.c(75): warning:  #223-D: function "BSP_PB_Init" declared implicitly
-    BSP_PB_Init(BUTTON_KEY, BUTTON_MODE_EXTI);
-LowPower.c(75): error:  #20: identifier "BUTTON_KEY" is undefined
-    BSP_PB_Init(BUTTON_KEY, BUTTON_MODE_EXTI);
-LowPower.c(75): error:  #20: identifier "BUTTON_MODE_EXTI" is undefined
-    BSP_PB_Init(BUTTON_KEY, BUTTON_MODE_EXTI);
-LowPower.c(88): warning:  #223-D: function "ETH_PhyExitFromPowerDownMode" declared implicitly
-    ETH_PhyExitFromPowerDownMode();
-LowPower.c(176): warning:  #223-D: function "Error_Handler" declared implicitly
-      Error_Handler(); 
-LowPower.c(206): warning:  #223-D: function "SYSCLKConfig_STOP" declared implicitly
-    SYSCLKConfig_STOP();
-LowPower.c(209): warning:  #223-D: function "ETH_PhyExitFromPowerDownMode" declared implicitly
-    ETH_PhyExitFromPowerDownMode();
-LowPower.c(215): warning:  #223-D: function "Error_Handler" declared implicitly
-      Error_Handler(); 
-LowPower.c: 7 warnings, 2 errors
-compiling SNTP.c...
-".\Debug\HTTP_Server.axf" - 2 Error(s), 7 Warning(s).
+LowPower.c(99): warning:  #177-D: function "SYSCLKConfig_STOP"  was declared but never referenced
+  static void SYSCLKConfig_STOP(void)
+LowPower.c: 1 warning, 0 errors
+linking...
+Program Size: Code=113748 RO-data=33536 RW-data=34732 ZI-data=29984  
+".\Debug\HTTP_Server.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -172,30 +157,30 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: ARM::CMSIS:RTOS2:Keil RTX5:Source:5.5.3
-      Source file:   CMSIS\RTOS2\RTX\Template\Events.c
-      Source file:   CMSIS\RTOS2\RTX\Template\MemPool.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Mutex.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Thread.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Semaphore.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_timer.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_evflags.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_mutex.c
       Source file:   CMSIS\RTOS2\RTX\Template\main.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_kernel.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_semaphore.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_memory.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_mempool.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_thread.c
-      Source file:   CMSIS\RTOS2\RTX\Template\MsgQueue.c
-      Source file:   CMSIS\RTOS2\RTX\Template\Timer.c
       Source file:   CMSIS\RTOS2\RTX\Template\svc_user.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_mutex.c
       Include file:  CMSIS\RTOS2\RTX\Config\RTX_Config.h
+      Include file:  CMSIS\RTOS2\RTX\Include\rtx_os.h
+      Source file:   CMSIS\RTOS2\RTX\Template\Semaphore.c
+      Source file:   CMSIS\RTOS2\RTX\Config\RTX_Config.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_delay.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_semaphore.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Timer.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_mempool.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_timer.c
       Source file:   CMSIS\RTOS2\RTX\Source\rtx_msgqueue.c
       Source file:   CMSIS\RTOS2\RTX\Source\rtx_system.c
-      Source file:   CMSIS\RTOS2\RTX\Source\rtx_delay.c
       Source file:   CMSIS\RTOS2\RTX\Source\rtx_evr.c
-      Include file:  CMSIS\RTOS2\RTX\Include\rtx_os.h
-      Source file:   CMSIS\RTOS2\RTX\Config\RTX_Config.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Events.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Thread.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_thread.c
+      Source file:   CMSIS\RTOS2\RTX\Template\Mutex.c
+      Source file:   CMSIS\RTOS2\RTX\Template\MemPool.c
+      Source file:   CMSIS\RTOS2\RTX\Template\MsgQueue.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_kernel.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_evflags.c
+      Source file:   CMSIS\RTOS2\RTX\Source\rtx_memory.c
       Source file:   CMSIS\RTOS2\RTX\Source\rtx_lib.c
       Source file:   CMSIS\RTOS2\RTX\Source\ARM\irq_armv7m.s
       Source file:   CMSIS\RTOS2\Source\os_systick.c
@@ -209,10 +194,10 @@ Package Vendor: Keil
       Source file:   Source\retarget_io.c
 
    * Component: Keil.MDK-Pro::Network:CORE:IPv4/IPv6 Debug:7.15.0
+      Include file:  Network\Include\rl_net.h
+      Source file:   Network\Config\Net_Config.c
       Library file:  Network\Lib\ARM\Net_Dbg_CM3_L.lib
       Source file:   Network\Config\Net_Debug.c
-      Source file:   Network\Config\Net_Config.c
-      Include file:  Network\Include\rl_net.h
 
    * Component: Keil.MDK-Pro::Network:Interface:ETH:7.15.0
       Include file:  Network\Config\Net_Config_ETH.h
@@ -221,20 +206,20 @@ Package Vendor: Keil
       Include file:  Network\Config\Net_Config_SNTP_Client.h
 
    * Component: Keil.MDK-Pro::Network:Service:Web Server Compact:HTTP:7.15.0
-      Include file:  Network\Config\Net_Config_HTTP_Server.h
-      Source file:   Network\Template\HTTP_Server_CGI.c
-      Source file:   Network\Template\HTTP_Server_Multiuser.c
       Source file:   Network\Template\HTTP_Server_Error.c
+      Include file:  Network\Config\Net_Config_HTTP_Server.h
       Source file:   Network\Template\HTTP_Server_Access.c
+      Source file:   Network\Template\HTTP_Server_Multiuser.c
+      Source file:   Network\Template\HTTP_Server_CGI.c
 
    * Component: Keil.MDK-Pro::Network:Socket:TCP:7.15.0
       Include file:  Network\Config\Net_Config_TCP.h
-      Source file:   Network\Template\TCP_Socket_Client.c
       Source file:   Network\Template\TCP_Socket_Server.c
+      Source file:   Network\Template\TCP_Socket_Client.c
 
    * Component: Keil.MDK-Pro::Network:Socket:UDP:7.15.0
-      Include file:  Network\Config\Net_Config_UDP.h
       Source file:   Network\Template\UDP_Socket.c
+      Include file:  Network\Config\Net_Config_UDP.h
 
    * Component: Keil::CMSIS Driver:Ethernet MAC:2.10
       Source file:   CMSIS\Driver\EMAC_STM32F4xx.c
@@ -246,23 +231,23 @@ Package Vendor: Keil
       Source file:   CMSIS\Driver\SPI_STM32F4xx.c
 
    * Component: Keil::Device:STM32Cube Framework:Classic:1.8.1
-      Source file:   MDK\Templates\Src\main.c
-      Include file:  MDK\Templates\Inc\stm32f4xx_hal_conf.h
-      Include file:  MDK\Templates_LL\Inc\main.h
-      Include file:  MDK\Templates\Inc\main.h
-      Source file:   MDK\Templates\Src\stm32f4xx_hal_msp.c
-      Source file:   MDK\Templates\Src\stm32f4xx_it.c
-      Source file:   MDK\Templates_LL\Src\main.c
-      Include file:  CMSIS\Driver\Config\RTE_Device.h
       Include file:  MDK\Templates\Inc\stm32f4xx_it.h
+      Include file:  MDK\Templates\Inc\stm32f4xx_hal_conf.h
+      Include file:  MDK\Templates\Inc\main.h
+      Include file:  MDK\Templates_LL\Inc\main.h
+      Source file:   MDK\Templates\Src\stm32f4xx_hal_msp.c
+      Source file:   MDK\Templates_LL\Src\main.c
+      Source file:   MDK\Templates\Src\main.c
+      Include file:  CMSIS\Driver\Config\RTE_Device.h
+      Source file:   MDK\Templates\Src\stm32f4xx_it.c
 
    * Component: Keil::Device:STM32Cube HAL:ADC:1.8.1
       Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_adc.c
       Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_adc_ex.c
 
    * Component: Keil::Device:STM32Cube HAL:Common:1.8.1
-      Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c
       Include file:  Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h
+      Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c
 
    * Component: Keil::Device:STM32Cube HAL:Cortex:1.8.1
       Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_cortex.c
@@ -283,8 +268,8 @@ Package Vendor: Keil
       Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_rcc.c
 
    * Component: Keil::Device:STM32Cube HAL:RTC:1.8.1
-      Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_rtc.c
       Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_rtc_ex.c
+      Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_rtc.c
 
    * Component: Keil::Device:STM32Cube HAL:SPI:1.8.1
       Source file:   Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_spi.c
@@ -303,7 +288,6 @@ Package Vendor: Keil
       Source file:   MDK\Device\Source\ARM\STM32F42xxx_43xxx_OPT.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f429xx.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
-Target not created.
 Build Time Elapsed:  00:00:02
 </pre>
 </body>
