--- a/P3_Ejer_2_Lab/Debug/HTTP_Server.htm
+++ b/P3_Ejer_2_Lab/Debug/HTTP_Server.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Debug\HTTP_Server.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Debug\HTTP_Server.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Thu Mar 16 12:24:30 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Thu Mar 16 12:53:47 2023
 <BR><P>
 <H3>Maximum Stack Usage =        344 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -7645,13 +7645,13 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[420]"></a>net_strcpy</STRONG> (Thumb, 18 bytes, Stack size 0 bytes, net_common.o(i.net_strcpy))
-<BR><BR>[Called By]<UL><LI><a href="#[471]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_path
-<LI><a href="#[45e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;utc_to_http
+<BR><BR>[Called By]<UL><LI><a href="#[45e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;utc_to_http
 <LI><a href="#[464]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_error_msg
 <LI><a href="#[45b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_add_header
 <LI><a href="#[41f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;add_server_id
 <LI><a href="#[433]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;dhcp6_send_message
 <LI><a href="#[11a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_auth_basic_add
+<LI><a href="#[471]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_path
 <LI><a href="#[154]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netHTTPs_SetPassword
 </UL>
 
@@ -10456,13 +10456,13 @@ Local Symbols
 <P><STRONG><a name="[42a]"></a>chk_post_req</STRONG> (Thumb, 284 bytes, Stack size 24 bytes, net_http_server.o(i.chk_post_req))
 <BR><BR>[Stack]<UL><LI>Max Depth = 136<LI>Call Chain = chk_post_req &rArr; net_mem_alloc &rArr; mem_unlock &rArr; netos_unlock &rArr; osMutexRelease &rArr; EvrRtxMutexRelease &rArr; EventRecord2 &rArr; EventRecordItem
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
-<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
-<LI><a href="#[42f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_atoi
+<BR>[Calls]<UL><LI><a href="#[42f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_atoi
 <LI><a href="#[42d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_strcpy
 <LI><a href="#[42e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_next_par
 <LI><a href="#[430]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_next_field
 <LI><a href="#[429]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_mem_alloc
+<LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
+<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
 <LI><a href="#[1c0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecordData
 </UL>
 <BR>[Called By]<UL><LI><a href="#[d3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_listener
@@ -10487,14 +10487,14 @@ Local Symbols
 <P><STRONG><a name="[45b]"></a>http_add_header</STRONG> (Thumb, 354 bytes, Stack size 24 bytes, net_http_server.o(i.http_add_header))
 <BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = http_add_header &rArr; utc_to_http &rArr; net_itoa_n0 &rArr; i2str &rArr; ul2str
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
-<LI><a href="#[45e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;utc_to_http
+<BR>[Calls]<UL><LI><a href="#[45e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;utc_to_http
 <LI><a href="#[41f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;add_server_id
 <LI><a href="#[420]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcpy
 <LI><a href="#[45c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGX_ContentType
 <LI><a href="#[460]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_CustomHeader
 <LI><a href="#[45d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_Charset
 <LI><a href="#[45f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_ultoa
+<LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
 </UL>
 <BR>[Called By]<UL><LI><a href="#[478]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_server_run
 </UL>
@@ -10512,8 +10512,8 @@ Local Symbols
 <P><STRONG><a name="[465]"></a>http_get_ftype</STRONG> (Thumb, 106 bytes, Stack size 24 bytes, net_http_server.o(i.http_get_ftype))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = http_get_ftype &rArr; net_strcasecmp
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
-<LI><a href="#[466]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_ContentType
+<BR>[Calls]<UL><LI><a href="#[466]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_ContentType
+<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
 </UL>
 <BR>[Called By]<UL><LI><a href="#[d3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_listener
 </UL>
@@ -10532,8 +10532,7 @@ Local Symbols
 <P><STRONG><a name="[d3]"></a>http_listener</STRONG> (Thumb, 642 bytes, Stack size 40 bytes, net_http_server.o(i.http_listener))
 <BR><BR>[Stack]<UL><LI>Max Depth = 264<LI>Call Chain = http_listener &rArr; http_proc_post &rArr; netCGI_ProcessData &rArr; netHTTPs_SetPassword &rArr; EventRecordData &rArr; EventRecordItem
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
-<LI><a href="#[46e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;read_script_line
+<BR>[Calls]<UL><LI><a href="#[46e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;read_script_line
 <LI><a href="#[46a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;proc_req_line
 <LI><a href="#[46d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_proc_post
 <LI><a href="#[46f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_proc_multipart
@@ -10544,6 +10543,7 @@ Local Symbols
 <LI><a href="#[42a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;chk_post_req
 <LI><a href="#[429]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_mem_alloc
 <LI><a href="#[469]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netHTTPs_AcceptClient
+<LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
 <LI><a href="#[149]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_ProcessQuery
 <LI><a href="#[1c0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecordData
 <LI><a href="#[1b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecord2
@@ -10553,10 +10553,10 @@ Local Symbols
 <P><STRONG><a name="[46c]"></a>http_open_file</STRONG> (Thumb, 352 bytes, Stack size 48 bytes, net_http_server.o(i.http_open_file))
 <BR><BR>[Stack]<UL><LI>Max Depth = 144<LI>Call Chain = http_open_file &rArr; EventRecordData &rArr; EventRecordItem
 </UL>
-<BR>[Calls]<UL><LI><a href="#[471]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_path
-<LI><a href="#[155]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strlen
+<BR>[Calls]<UL><LI><a href="#[155]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strlen
 <LI><a href="#[470]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netHTTPs_FileAccess
 <LI><a href="#[474]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_Redirect
+<LI><a href="#[471]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_path
 <LI><a href="#[167]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;imageFileInfo
 <LI><a href="#[1c0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecordData
 <LI><a href="#[1b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecord2
@@ -10570,9 +10570,9 @@ Local Symbols
 <P><STRONG><a name="[46b]"></a>http_parse_header</STRONG> (Thumb, 212 bytes, Stack size 32 bytes, net_http_server.o(i.http_parse_header))
 <BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = http_parse_header &rArr; EventRecordData &rArr; EventRecordItem
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
-<LI><a href="#[475]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_to_utc
+<BR>[Calls]<UL><LI><a href="#[475]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_to_utc
 <LI><a href="#[430]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_next_field
+<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
 <LI><a href="#[1c0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecordData
 </UL>
 <BR>[Called By]<UL><LI><a href="#[d3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_listener
@@ -10581,12 +10581,12 @@ Local Symbols
 <P><STRONG><a name="[46f]"></a>http_proc_multipart</STRONG> (Thumb, 378 bytes, Stack size 24 bytes, net_http_server.o(i.http_proc_multipart))
 <BR><BR>[Stack]<UL><LI>Max Depth = 224<LI>Call Chain = http_proc_multipart &rArr; netCGI_ProcessData &rArr; netHTTPs_SetPassword &rArr; EventRecordData &rArr; EventRecordItem
 </UL>
-<BR>[Calls]<UL><LI><a href="#[477]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strnchr
-<LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
-<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
-<LI><a href="#[476]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;search_delim
+<BR>[Calls]<UL><LI><a href="#[476]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;search_delim
 <LI><a href="#[42e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_next_par
 <LI><a href="#[430]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_next_field
+<LI><a href="#[477]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strnchr
+<LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
+<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
 <LI><a href="#[14d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netCGI_ProcessData
 <LI><a href="#[1c0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecordData
 <LI><a href="#[1b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecord2
@@ -10652,8 +10652,8 @@ Local Symbols
 <P><STRONG><a name="[475]"></a>http_to_utc</STRONG> (Thumb, 168 bytes, Stack size 32 bytes, net_http_server.o(i.http_to_utc))
 <BR><BR>[Stack]<UL><LI>Max Depth = 48<LI>Call Chain = http_to_utc &rArr; net_atoi
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
-<LI><a href="#[42f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_atoi
+<BR>[Calls]<UL><LI><a href="#[42f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_atoi
+<LI><a href="#[42c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcmp
 </UL>
 <BR>[Called By]<UL><LI><a href="#[46b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;http_parse_header
 </UL>
@@ -10704,11 +10704,11 @@ Local Symbols
 <P><STRONG><a name="[11b]"></a>http_auth_basic_parse</STRONG> (Thumb, 128 bytes, Stack size 24 bytes, net_http_server_auth.o(i.http_auth_basic_parse))
 <BR><BR>[Stack]<UL><LI>Max Depth = 120<LI>Call Chain = http_auth_basic_parse &rArr; EventRecordData &rArr; EventRecordItem
 </UL>
-<BR>[Calls]<UL><LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
-<LI><a href="#[14f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strcmp
+<BR>[Calls]<UL><LI><a href="#[14f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;strcmp
 <LI><a href="#[463]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;netHTTPs_CheckAccount
 <LI><a href="#[462]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strchr
 <LI><a href="#[461]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_base64_decode
+<LI><a href="#[42b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;net_strcasecmp
 <LI><a href="#[1c0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;EventRecordData
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> net_http_server_auth.o(.constdata)
